fix(title): fix letter-spacing

--- a/app/components/title/styles.css
+++ b/app/components/title/styles.css
@@ -10,6 +10,7 @@
 		margin-bottom: 11px;
 		letter-spacing: 1px;
 		text-transform: uppercase;
+		letter-spacing: 0.075em;
 	}
 
 	&_size_small {
@@ -17,5 +18,6 @@
 		font-size: 15px;
 		margin-bottom: 9px;
 		text-transform: uppercase;
+		letter-spacing: 0.075em;
 	}
 }
